# city-of-wires

./: CMakeLists.txt  CONFIG_README.md  README.md  run.sh  volumetric_config.json
.cursor/rules/: lighting.mdc  procedural-city.mdc
docs/: VOLUMETRIC_CONFIG.md  volumetric_lighting_plan.md
shaders/: bloom.frag  bloom.frag.spv  city.frag  city.frag.spv  city.vert  city.vert.spv  cube.frag  cube.vert  debug_chunk.frag  debug_chunk.vert  debug_text.frag  debug_text.vert  hdr.frag  hdr.frag.spv  neon.frag  neon.frag.spv  neon.vert  neon.vert.spv  postprocess.frag  postprocess.frag.spv  postprocess.vert  postprocess.vert.spv  shadow_darken.frag  shadow_darken.vert  shadow_volume.frag  shadow_volume.vert  sun.frag  sun.vert  vol_anamorphic_bloom.comp  vol_cluster_build.comp  vol_density_inject.comp  vol_light_inject.comp  vol_raymarch.comp  vol_temporal.comp
src/: CityGenerator.cpp  CityGenerator.hpp  Engine.cpp  Engine.hpp  FrustumCuller.hpp  Renderer.cpp  Renderer.cpp.bak  Renderer.cpp.bak2  Renderer.cpp.bak3  Renderer.cpp相比.bak4  Renderer.hpp  RendererCamera.cpp  RendererDebugOverlay.cpp  RendererGeometry.cpp  RendererPipelines.cpp  RendererPostProcess.cpp  RendererPostProcess.hpp  RendererResources.cpp  RendererShadow.cpp  RendererShadowVolume.cpp  RendererSwapchain.cpp  RendererVolumetrics.cpp  RendererVulkanCore.cpp  VolumetricConfig.cpp  VolumetricConfig.hpp  VulkanUtils.cpp  VulkanUtils.hpp  main.cpp
